[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Background.png" type="Texture" id=2]
[ext_resource path="res://Fonts/DynamicFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/LevelSelect.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -8.0
margin_bottom = -39.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -24.0
margin_top = -24.0
margin_right = 1016.0
margin_bottom = 561.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1040.0
margin_bottom = 585.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1040.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Himari vs Monika"
align = 1

[node name="Separator" type="Control" parent="VBoxContainer"]
margin_top = 47.0
margin_right = 1040.0
margin_bottom = 214.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 218.0
margin_right = 1040.0
margin_bottom = 414.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 210.0
margin_bottom = 196.0

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 210.0
margin_bottom = 43.0
text = "Play"

[node name="Separator4" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 210.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelSelectButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 210.0
margin_bottom = 94.0
text = "Level Select"

[node name="Separator5" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 210.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SettingsButtons" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 210.0
margin_bottom = 145.0
text = "Settings"

[node name="Separator6" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 210.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 210.0
margin_bottom = 196.0
text = "Quit"

[node name="Separator3" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 214.0
margin_right = 1040.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Separator2" type="Control" parent="VBoxContainer"]
margin_top = 418.0
margin_right = 1040.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelSelect" type="PopupDialog" parent="."]
margin_right = 992.0
margin_bottom = 537.0

[node name="VBoxContainer2" type="VBoxContainer" parent="LevelSelect"]
margin_right = 992.0
margin_bottom = 537.0

[node name="Label" type="Label" parent="LevelSelect/VBoxContainer2"]
margin_right = 992.0
margin_bottom = 43.0
text = "Select Level"
align = 1

[node name="Separator3" type="Control" parent="LevelSelect/VBoxContainer2"]
margin_top = 47.0
margin_right = 992.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="LevelSelect/VBoxContainer2"]
margin_top = 214.0
margin_right = 992.0
margin_bottom = 369.0

[node name="Separator" type="Control" parent="LevelSelect/VBoxContainer2/HBoxContainer"]
margin_right = 135.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.29

[node name="BackButton" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer"]
margin_left = 139.0
margin_right = 240.0
margin_bottom = 155.0
size_flags_stretch_ratio = 0.29
text = "Back"

[node name="Separator2" type="Control" parent="LevelSelect/VBoxContainer2/HBoxContainer"]
margin_left = 244.0
margin_right = 380.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.29

[node name="LevelContainer" type="GridContainer" parent="LevelSelect/VBoxContainer2/HBoxContainer"]
margin_left = 384.0
margin_right = 852.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
script = ExtResource( 4 )

[node name="Button" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/LevelContainer"]
margin_right = 154.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Button2" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/LevelContainer"]
margin_left = 158.0
margin_right = 311.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Button3" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/LevelContainer"]
margin_left = 315.0
margin_right = 468.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Button4" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/LevelContainer"]
margin_top = 53.0
margin_right = 154.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Button5" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/LevelContainer"]
margin_left = 158.0
margin_top = 53.0
margin_right = 311.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Button6" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/LevelContainer"]
margin_left = 315.0
margin_top = 53.0
margin_right = 468.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Button7" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/LevelContainer"]
margin_top = 106.0
margin_right = 154.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Button8" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/LevelContainer"]
margin_left = 158.0
margin_top = 106.0
margin_right = 311.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Button9" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/LevelContainer"]
margin_left = 315.0
margin_top = 106.0
margin_right = 468.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="Separator4" type="Control" parent="LevelSelect/VBoxContainer2/HBoxContainer"]
margin_left = 856.0
margin_right = 992.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.29

[node name="Separator2" type="Control" parent="LevelSelect/VBoxContainer2"]
margin_top = 373.0
margin_right = 992.0
margin_bottom = 537.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" type="PopupDialog" parent="."]
visible = true
margin_right = 992.0
margin_bottom = 537.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings"]
margin_right = 992.0
margin_bottom = 537.0

[node name="Label" type="Label" parent="Settings/VBoxContainer2"]
margin_right = 992.0
margin_bottom = 43.0
text = "Settings"
align = 1

[node name="Separator" type="Control" parent="Settings/VBoxContainer2"]
margin_top = 47.0
margin_right = 992.0
margin_bottom = 145.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/VBoxContainer2"]
margin_top = 149.0
margin_right = 992.0
margin_bottom = 286.0

[node name="Separator4" type="Control" parent="Settings/VBoxContainer2/HBoxContainer2"]
margin_right = 36.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.04

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/VBoxContainer2/HBoxContainer2"]
margin_left = 40.0
margin_right = 951.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer"]
margin_right = 911.0
margin_bottom = 137.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_right = 277.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.44

[node name="Label" type="Label" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 277.0
margin_bottom = 43.0
text = "Music:"

[node name="Label2" type="Label" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 277.0
margin_bottom = 90.0
text = "SFX:"

[node name="Label3" type="Label" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 277.0
margin_bottom = 137.0
text = "Show FPS:"

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 281.0
margin_right = 911.0
margin_bottom = 137.0
size_flags_horizontal = 3

[node name="MusicSlider" type="HSlider" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 630.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SFXSlider" type="HSlider" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 630.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FPSBox" type="CheckBox" parent="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 73.0
margin_right = 64.0
margin_bottom = 137.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Separator5" type="Control" parent="Settings/VBoxContainer2/HBoxContainer2"]
margin_left = 955.0
margin_right = 992.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.04

[node name="Separator3" type="Control" parent="Settings/VBoxContainer2"]
margin_top = 290.0
margin_right = 992.0
margin_bottom = 388.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer2"]
margin_top = 392.0
margin_right = 992.0
margin_bottom = 435.0

[node name="Separator" type="Control" parent="Settings/VBoxContainer2/HBoxContainer"]
margin_right = 447.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="Settings/VBoxContainer2/HBoxContainer"]
margin_left = 451.0
margin_right = 540.0
margin_bottom = 43.0
text = "Back"

[node name="Separator2" type="Control" parent="Settings/VBoxContainer2/HBoxContainer"]
margin_left = 544.0
margin_right = 992.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Separator2" type="Control" parent="Settings/VBoxContainer2"]
margin_top = 439.0
margin_right = 992.0
margin_bottom = 537.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/SettingsButtons" to="." method="_on_SettingsButtons_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="LevelSelect/VBoxContainer2/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="toggled" from="Settings/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/FPSBox" to="." method="_on_FPSBox_toggled"]
[connection signal="pressed" from="Settings/VBoxContainer2/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
